fix: no blurry canvas

--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -94,11 +94,14 @@ body {
 }
 
 .view {
-  display: flex;
-  justify-content: center;
   margin: 1rem 0;
 
+  text-align: center;
   flex: 1 0 auto;
+}
+
+.view > canvas {
+  margin: auto;
 }
 
 .footer {
